# truck-tutorial-code

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
chapter2/: Cargo.toml
chapter2/src/: section2_1.rs  section2_2.rs  section2_3.rs  section2_4.rs  section2_5.rs
chapter3/: Cargo.toml
chapter3/src/: section3_1.rs  section3_2.rs  section3_3.rs
chapter4/: Cargo.toml
chapter4/src/: section4_1.rs  section4_2.rs  section4_3.rs  section4_4.rs  section4_6.rs
src/: app.rs  section2_1.rs  section2_2.rs  section2_3.rs  section2_4.rs  section2_5.rs  section2_6.rs
src/chapter2/: section2_1.rs  section2_2.rs  section2_3.rs  section2_4.rs
src/chapter3/: section3_2.rs  section3_3.rs
src/chapter4/: app.rs  section4_4.rs  section4_5.rs
