[package]
name = "truck-tutorial-code"
version = "0.1.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
winit = "0.28.6" # low-level crate for handling GUI systems
futures = "0.3.28" # Abstractions for asynchronous programming. Necessary for communicate with GPU.
truck-modeling = { git = "https://github.com/ricosjp/truck.git" }
truck-meshalgo = { git = "https://github.com/ricosjp/truck.git" }
truck-stepio = { git = "https://github.com/ricosjp/truck.git" }
truck-platform = { git = "https://github.com/ricosjp/truck.git" } # graphic utility library based on wgpu
truck-rendimpl = { git = "https://github.com/ricosjp/truck.git" } # Visualization of shape and polygon mesh based on truck-platform

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
instant = { version = "0.1.12", features = [ "now" ] }
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1.12", features = [ "now", "wasm-bindgen" ] }
wasm-bindgen-futures = "0.4.37"

[[bin]]
name = "section2_1"
path = "src/chapter2/section2_1.rs"

[[bin]]
name = "section2_2"
path = "src/chapter2/section2_2.rs"

[[bin]]
name = "section2_3"
path = "src/chapter2/section2_3.rs"

[[bin]]
name = "section2_4"
path = "src/chapter2/section2_4.rs"

[[bin]]
name = "section2_5"
path = "src/chapter2/section2_5.rs"

[[bin]]
name = "section3_1"
path = "src/chapter3/section3_1.rs"

[[bin]]
name = "section3_2"
path = "src/chapter3/section3_2.rs"

[[bin]]
name = "section3_3"
path = "src/chapter3/section3_3.rs"

[[bin]]
name = "section4_1"
path = "src/chapter4/section4_1.rs"

[[bin]]
name = "section4_2"
path = "src/chapter4/section4_2.rs"

[[bin]]
name = "section4_3"
path = "src/chapter4/section4_3.rs"

[[bin]]
name = "section4_4"
path = "src/chapter4/section4_4.rs"

[[bin]]
name = "section4_5"
path = "src/chapter4/section4_5.rs"

[[bin]]
name = "section4_6"
path = "src/chapter4/section4_6.rs"
