[package]
name = "chapter3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
truck-modeling = "0.6.0"
truck-meshalgo = "0.4.0"
truck-stepio = "0.3.0"

[[bin]]
name = "section3_1"
path = "src/section3_1.rs"

[[bin]]
name = "section3_2"
path = "src/section3_2.rs"

[[bin]]
name = "section3_3"
path = "src/section3_3.rs"
