[package]
name = "chapter4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
winit = "0.28.6" # low-level crate for handling GUI systems
truck-platform = { git = "https://github.com/ricosjp/truck.git" } # graphic utility library based on wgpu
truck-rendimpl = { git = "https://github.com/ricosjp/truck.git" } # Visualization of shape and polygon mesh based on truck-platform

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
instant = { version = "0.1.12", features = [ "now" ] }
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1.12", features = [ "now", "wasm-bindgen" ] }
wasm-bindgen-futures = "0.4.37"

[[bin]]
name = "section4_1"
path = "src/section4_1.rs"

[[bin]]
name = "section4_2"
path = "src/section4_2.rs"

[[bin]]
name = "section4_3"
path = "src/section4_3.rs"
